# backtest-hub

./: .gitignore  API_DOCS_BACKTEST_DOCKER.md  Action.md  ChangeLog.md  Dockerfile  README.md  app.py  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_spec.json  scheduler.py
backtest_hub_cli/: cli.py
docs/: aave_storage_readability_20260318.md  architecture.md  backtest_51d_slow_run_repro_plan_20260319.md  backtest_api_background_warmup_20260318.md  backtest_cache_cold_vs_warm_20260318.md  backtest_cache_prewarm_guide.md  backtest_data_plane_ops_runbook.md  backtest_mainline_decision_20260318.md  backtest_memory_probe_20260317.md  backtest_prefetch_design_backlog_20260318.md  backtest_replay_prefetch_qualification_plan_20260319.md  backtest_slow_run_mainline_20260319.md  backtest_warmup_cache_incident_20260319.md  backtest_warmup_cycle_harness.md  backtest_warmup_isolated_harness_design_20260319.md  backtest_worker_2x2_20260318.md  backtest_worker_old_vs_current_20260318.md
scripts/: __init__.py  backtest_hub_sdk.py  build_strategy_wheel.sh  catalog_config.py  catalog_controls.py  catalog_prefetch.py  cli.py  generate_run_spec.py  prewarm_catalog_cache.py  run_backtest.py  run_warmup_cycle_serial.py  runtime_paths.py  submit_run.py  warmup_cycle_harness.py
services/: __init__.py  report_service.py  report_service_bak.py  run_store_sqlite.py  scheduler.py
strategies/: .strategyignore  simple_bundle_demo.py  spot_futures_arb_diagnostics.py
tests/: test_catalog_controls.py  test_catalog_prefetch.py  test_cli_submit_strategy_bundle.py  (+27 more)
(+5 files in other folders)
