[project]
name = "backtest-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "fastapi>=0.128.0",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
backtest-hub-cli = "scripts.cli:main"
