[project]
name = "backtest-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "fastapi>=0.128.0",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
backtest-hub-cli = "backtest_hub_cli.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backtest_hub_cli*"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
